--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,9 @@
    "id": "fd4754c3-bfec-43d8-b0d2-840e99fd2df1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello world\")"
+   ]
   }
  ],
  "metadata": {
