--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0aed40b9-e965-4990-a54a-dd29cfbf48e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f1bd95-6422-47ae-a887-7f5ca0093393",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
