--- a/rough_work.ipynb
+++ b/rough_work.ipynb
@@ -17,43 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = index_dir.main(os.getcwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = list(test.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test[k[7]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loader = DirectoryLoader(os.getcwd()+'/data/')\n",
+    "loader = DirectoryLoader(os.getcwd()+'/data/', glob=\"**/*.docx\")\n",
     "docs = loader.load()"
    ]
   },
@@ -63,7 +27,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs"
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs[]"
    ]
   },
   {
